--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -12,13 +10,23 @@
       href="./images/favicon-32x32.png"
     />
 
+    <script type="module" src="./ArticlePreview.js"></script>
+
     <title>Article preview component</title>
   </head>
   <body>
-    Shift the overall look and feel by adding these wonderful touches to
-    furniture in your home Ever been in a room and felt like something was
-    missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple
-    tips to help you make any room feel complete. Michelle Appleton 28 Jun 2020
-    Share
+    <main id="app">
+      <article-preview
+        id="preview"
+        portada="./images/drawers.jpg"
+        title="Shift the overall look and feel by adding these wonderful touches to furniture in your home"
+        perfil="./images/avatar-michelle.jpg"
+        autor="Michelle Appleton"
+      >
+        been in a room and felt like something was missing? Perhaps it felt
+        slightly bare and uninviting. I’ve got some simple tips to help you make
+        any room feel complete.
+      </article-preview>
+    </main>
   </body>
 </html>
