Add: diseño principal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./style.css" />
 
     <script type="module" src="./ArticlePreview.js"></script>
 
@@ -19,11 +20,11 @@
       <article-preview
         id="preview"
         portada="./images/drawers.jpg"
-        title="Shift the overall look and feel by adding these wonderful touches to furniture in your home"
+        titulo="Shift the overall look and feel by adding these wonderful touches to furniture in your home"
         perfil="./images/avatar-michelle.jpg"
         autor="Michelle Appleton"
       >
-        been in a room and felt like something was missing? Perhaps it felt
+        Ever been in a room and felt like something was missing? Perhaps it felt
         slightly bare and uninviting. I’ve got some simple tips to help you make
         any room feel complete.
       </article-preview>
